Adding toolbar button for "add bookmark". Fixing webpages coming to front when they finish loading and get activated. Fix crash in keychain code when importing bookmarks. Clean up CHBrowserView's _webBrowser member use and fix a potential issue with setWebBrowser:. (bug 169595, and probably a few others).